@startuml
title 21. UML - Builder trong tạo đơn hàng

skinparam backgroundColor #FFFFFF
skinparam shadowing false
skinparam roundCorner 12
skinparam class {
  BackgroundColor #FFFFFF
  BorderColor #000000
  ArrowColor #000000
  FontColor #000000
  FontSize 14
  FontStyle bold
}

class CheckoutFacade {
}

class OrderBuilder <<Builder>> {
}

class Order <<Product>> {
}

class OrderDetail <<Product>> {
}

CheckoutFacade --> OrderBuilder
OrderBuilder --> Order
OrderBuilder --> OrderDetail

@enduml
